[2025-03-24 23:59:58]	No se encontró una version válida	Automatic update
[2025-03-25 17:00:20]	No se encontró una version válida	Version inestable
[2025-03-25 17:09:47]	No se encontró una version válida	Version inestable
[2025-03-25 20:17:50]	No se encontró una version válida	Version inestable
[2025-03-25 20:27:34]	No se encontró una version válida	Version inestable
[2025-03-25 20:42:24]	No se encontró una version válida	Version estable
[2025-03-26 20:58:51]	No se encontró una version válida	Calc layout mejorado
[2025-03-26 21:29:13]	No se encontró una version válida	Refactoring de Calc con @style/CalculatorButton
[2025-03-27 09:46:02]	No se encontró una version válida	Nuevas vistas incluidas modales
[2025-03-27 10:16:02]	No se encontró una version válida	Mejora en pantalla de desbloqueo
[2025-03-27 10:49:05]	No se encontró una version válida	Ventas modales genericas
[2025-03-27 11:07:21]	No se encontró una version válida	Mejoras en un modal
[2025-03-27 11:47:38]	No se encontró una version válida	Automatic update
[2025-03-27 12:08:57]	No se encontró una version válida	Completadas ventanas modales
[2025-03-27 12:21:25]	No se encontró una version válida	Automatic update
[2025-03-27 12:54:02]	No se encontró una version válida	Badge de Cart en Calc ya casi... falta counter
[2025-03-27 13:22:25]	No se encontró una version válida	Automatic update
[2025-03-27 13:25:08]	No se encontró una version válida	Automatic update
[2025-03-27 14:42:58]	No se encontró una version válida	Automatic update
[2025-03-27 15:30:13]	No se encontró una version válida	Automatic update
[2025-03-27 22:29:31]	No se encontró una version válida	Aun sin lograre se vea el total el boton de Pagar :(
[2025-03-27 22:54:16]	No se encontró una version válida	Aunque sigue sin mostrarse el TOTAL junto a PAGAR es version estable --compila--