@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#6200EE"/> <!-- Púrpura -->
+    <solid android:color="@color/blue_500"/>
     <corners android:radius="8dp"/> <!-- Bordes redondeados -->
 </shape>
