@@ -20,3 +20,4 @@
 [2025-03-27 15:30:13]	No se encontró una version válida	Automatic update
 [2025-03-27 22:29:31]	No se encontró una version válida	Aun sin lograre se vea el total el boton de Pagar :(
 [2025-03-27 22:54:16]	No se encontró una version válida	Aunque sigue sin mostrarse el TOTAL junto a PAGAR es version estable --compila--
+[2025-03-27 23:36:13]	No se encontró una version válida	Cambio de colores para botones. Editado themes.xml
